--- a/myadmin/templates/index.html
+++ b/myadmin/templates/index.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
-    <link rel="icon" type="image/png" href="/static/favicon.png">
+    <link rel="icon" type="image/png" href="/media/favicon.png">
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Public+Sans%3Awght%40400%3B500%3B700%3B900"
