--- a/myadmin/templates/forgot_password.html
+++ b/myadmin/templates/forgot_password.html
@@ -64,10 +64,10 @@
           <!-- same paths as your login header (omitted here for brevity in the editor) -->
         </svg>
       </div>
-      <h2>Hostel Portal - Forgot Password</h2>
+      <h2>Forgot Password</h2>
     </div>
     <div>
-      <a class="btn-ghost" href="{% url 'login_return' %}">Back to Login</a>
+      <a class="btn-ghost" href="{% url 'login_return' %}">Back</a>
     </div>
   </header>
 
