--- a/myadmin/templates/login.html
+++ b/myadmin/templates/login.html
@@ -109,7 +109,7 @@
         <h2>Hostel Portal - Login</h2>
       </div>
     <div>
-      <a class="btn-ghost" href="{% url 'home' %}">Back to home</a>
+      <a class="btn-ghost" href="{% url 'home' %}">Back</a>
     </div>
   </header>
 
