--- a/myadmin/templates/dashboard.html
+++ b/myadmin/templates/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Hostel Admin Dashboard</title>
-    <link rel="icon" type="image/png" href="/static/favicon.png">
+    <link rel="icon" type="image/png" href="/media/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
     <link
       rel="stylesheet"
@@ -298,5 +298,12 @@
         }
       })();
     </script>
+    <script>
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/admin/service-worker.js', { scope: '/admin/' })
+          .then(()=> console.log('admin SW registered'))
+          .catch(e=> console.error('admin SW failed', e));
+      }
+      </script>        
   </body>
 </html>
